--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	<div class="container">
 		<header id="cabecario">
 		<h1>Novo INSS</h1>
-		<h3>Calcular nova taxa do INSS</h3>
+		<h3>Calcular a nova taxa do INSS</h3>
 		</header>
 		<table id="valores">
 		<tr><td>Salário:</td><td><input type="text" id="salario-input" onchange="calcTaxa()" placeholder="Digite o valor sem os centavos" /></td></tr>
